agrega padding al footer

--- a/style.css
+++ b/style.css
@@ -6,13 +6,6 @@
   width: 620px;
   height: 100%;
 }
-@media (max-width: 844) {
-  .card-h {
-    display: flex;
-    flex-wrap: wrap;
-    width: 5px;
-  }
-}
 
 @media (max-width: 769px) {
   .text-carrusel {
@@ -43,5 +36,6 @@
     width: 100%;
     flex-wrap: wrap;
     gap: 2%;
+    padding-left: 10px;
   }
 }
